<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              tools:context=".MainActivity">


    <TextView
        android:id="@+id/textToBeChanged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/header_margin"
        android:layout_marginTop="@dimen/header_margin"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <EditText
        android:id="@+id/editTextUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/type_something"
        android:hint="@string/type_something"
        android:textStyle="italic" />

    <Button
        android:id="@+id/changeTextBt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_green_light"
        android:text="@string/change_text"
        android:textColor="?android:attr/colorPrimary" />


    <Button
        android:id="@+id/activityChangeTextBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/open_activity_and_change_text" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:contentDescription="@string/This_is_a_checkbox"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="8sp"
        android:text="This doesn't do anything"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        tools:targetApi="ice_cream_sandwich" />

</LinearLayout>
